bugs + front-end

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/itak-game.appspot.com/o/12.svg?alt=media&token=8bc6a465-5b71-4b94-aa8d-060d1cc36777" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
