--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,25 @@
 <html lang="en" class="h-100">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/itak-game.appspot.com/o/12.svg?alt=media&token=8bc6a465-5b71-4b94-aa8d-060d1cc36777" />
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/itak-game.appspot.com/o/12.svg?alt=media&token=8bc6a465-5b71-4b94-aa8d-060d1cc36777"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="iTak game"
-    />
+    <meta name="description" content="iTak game" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
